Update kmeta data and machine defs

--- a/conf/machine/arria10.conf
+++ b/conf/machine/arria10.conf
@@ -6,4 +6,7 @@ require conf/machine/include/socfpga.inc
 
 UBOOT_MACHINE = "socfpga_arria10_defconfig"
 
-KMACHINE ?= "arria10"
+KMACHINE = "arria10"
+
+KERNEL_DEVICETREE ?= "socfpga_arria10_socdk_sdmmc.dtb socfpga_arria10_socdk_qspi.dtb"
+
