--- a/conf/machine/arria5.conf
+++ b/conf/machine/arria5.conf
@@ -8,4 +8,11 @@ PREFERRED_VERSION_u-boot-socfpga = "2013.01.01"
 
 UBOOT_MACHINE = "socfpga_arria5"
 
-KMACHINE ?= "arria5"
+KMACHINE = "arria5"
+
+if [ "${KERNEL_PROVIDER}" == "linux-altera" ] ; then
+  KERNEL_DEVICETREE ?= "socfpga_arria5_socdk.dtb"
+else
+  KERNEL_DEVICETREE ?= "socfpga_arria5.dtb"
+fi
+
