--- a/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
+++ b/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
@@ -31,10 +31,10 @@ CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
 
 # PL310 - done
-CONFIG_PL310_ERRATA_588369=y
-CONFIG_PL310_ERRATA_727915=y
-CONFIG_PL310_ERRATA_753970=y
-CONFIG_PL310_ERRATA_769419=y
+CONFIG_OUTER_CACHE=y
+CONFIG_OUTER_CACHE_SYNC=y
+CONFIG_CACHE_L2X0=y
+CONFIG_CACHE_PL310=y
 
 # Watchdog - done
 CONFIG_WATCHDOG=y
@@ -45,7 +45,6 @@ CONFIG_NET_VENDOR_STMICRO=y
 CONFIG_STMMAC_ETH=y
 CONFIG_STMMAC_PLATFORM=y
 CONFIG_STMMAC_DEBUG_FS=y
-CONFIG_STMMAC_PHY_ID_ZERO_WORKAROUND=y
 CONFIG_STMMAC_RING=y
 CONFIG_FIXED_PHY=y
 
@@ -55,7 +54,6 @@ CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIO_GENERIC=y
 CONFIG_GPIO_DWAPB=y
-CONFIG_GPIO_PL061=y
 
 # I2C - done
 CONFIG_I2C=y
@@ -69,7 +67,6 @@ CONFIG_CAN_C_CAN_PLATFORM=y
 
 # MMC/SD - done
 CONFIG_MMC=y
-CONFIG_MMC_SDHCI=y
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_IDMAC=y
 CONFIG_MMC_DW_PLTFM=y
@@ -94,10 +91,8 @@ CONFIG_USB_DWC2_DUAL_ROLE=y
 CONFIG_USB_PHY=y
 CONFIG_NOP_USB_XCEIV=y
 
+
 # Timer
-CONFIG_CLKSRC_OF=y
-CONFIG_DW_APB_TIMER=y
-CONFIG_DW_APB_TIMER_OF=y
 
 # SERIAL
 CONFIG_SERIAL=y
@@ -109,3 +104,7 @@ CONFIG_SERIAL_8250_DMA=y
 CONFIG_SERIAL_8250_NR_UARTS=2
 CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 
+# CAN - done
+CONFIG_CAN=y
+CONFIG_CAN_C_CAN=y
+CONFIG_CAN_C_CAN_PLATFORM=y
