--- a/conf/machine/cyclone5.conf
+++ b/conf/machine/cyclone5.conf
@@ -8,4 +8,11 @@ PREFERRED_VERSION_u-boot-socfpga = "2013.01.01"
 
 UBOOT_MACHINE = "socfpga_cyclone5"
 
-KMACHINE ?= "cyclone5"
+KMACHINE = "cyclone5"
+
+if [ "${KERNEL_PROVIDER}" == "linux-altera" ] ; then
+  KERNEL_DEVICETREE ?= "socfpga_cyclone5_socdk.dtb"
+else
+  KERNEL_DEVICETREE ?= "socfpga_cyclone5.dtb"
+fi
+
