--- a/recipes-kernel/linux/config/socfpga-base/features/altera/board-common.cfg
+++ b/recipes-kernel/linux/config/socfpga-base/features/altera/board-common.cfg
@@ -1,11 +1,6 @@
-# Common drivers for Zynq Boards
-
-CONFIG_LEGACY_PTYS=n
-
 # Ethernet PHYs
 CONFIG_PHYLIB=y
 CONFIG_MARVELL_PHY=y
-CONFIG_VITESSE_PHY=y
 CONFIG_MICREL_PHY=y
 
 # EEPROM
@@ -18,3 +13,15 @@ CONFIG_MTD_OF_PARTS=y
 # RTC drivers
 CONFIG_RTC_DRV_DS1307=y
 
+CONFIG_NEWHAVEN_LCD=y
+
+CONFIG_PMBUS=y
+CONFIG_SENSORS_LTC2978=y
+
+CONFIG_MTD_M25P80=y
+CONFIG_M25PXX_USE_FAST_READ=y
+
+CONFIG_SENSORS_MAX1619=y
+
+CONFIG_I2C_CHARDEV=y
+CONFIG_SPI_SPIDEV=y
