--- a/recipes-kernel/linux/config/socfpga-base/ktypes/standard/standard.cfg
+++ b/recipes-kernel/linux/config/socfpga-base/ktypes/standard/standard.cfg
@@ -4,7 +4,9 @@ CONFIG_LOG_BUF_SHIFT=14
 
 CONFIG_SYSVIPC=y
 CONFIG_SYSCTL_SYSCALL=y
+
 CONFIG_FHANDLE=y
+
 CONFIG_AUDIT=y
 
 CONFIG_IKCONFIG=y
@@ -18,59 +20,40 @@ CONFIG_SWAP=y
 CONFIG_TIMER_STATS=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
+
+CONFIG_NAMESPACES=y
+CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
+CONFIG_PID_NS=y
+CONFIG_NET_NS=y
+
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
 
-CONFIG_PREEMPT=y
 CONFIG_CGROUPS=y
 
-CONFIG_NET=y
-CONFIG_PACKET=y
-CONFIG_UNIX=y
-CONFIG_INET=y
-CONFIG_IP_MULTICAST=y
-CONFIG_IP_PNP=y
-CONFIG_IP_PNP_DHCP=y
-CONFIG_IP_PNP_BOOTP=y
-CONFIG_IP_PNP_RARP=y
-CONFIG_NET_IPIP=m
-CONFIG_VLAN_8021Q=m
+CONFIG_SLUB_DEBUG=y
+CONFIG_SLUB=y
+CONFIG_PROFILING=y
+CONFIG_TRACEPOINTS=y
+CONFIG_OPROFILE=y
 
-CONFIG_NETDEVICES=y
+CONFIG_DEFAULT_NOOP=y
+CONFIG_DEFAULT_IOSCHED="noop"
+
 CONFIG_MDIO_BITBANG=y
 
-CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
+CONFIG_CAN_DEBUG_DEVICES=y
 
-CONFIG_DEVTMPFS=y
-CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 
 CONFIG_CONNECTOR=y
 
 CONFIG_MEMORY=y
 
-CONFIG_MTD=y
-CONFIG_MTD_CMDLINE_PARTS=y
-CONFIG_MTD_BLOCK=y
-CONFIG_MTD_PHYSMAP=y
-CONFIG_MTD_PHYSMAP_OF=y
-CONFIG_MTD_NAND=y
-
 CONFIG_RD_XZ=y
-CONFIG_BLK_DEV_INITRD=y
-CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_SIZE=16384
-
-CONFIG_TMPFS=y
-CONFIG_EXT2_FS=y
-CONFIG_EXT3_FS=y
-CONFIG_EXT4_FS=y
-CONFIG_JFFS2_FS=y
-CONFIG_JFFS2_SUMMARY=y
-CONFIG_NFS_FS=y
-CONFIG_ROOT_NFS=y
 
 CONFIG_NLS=y
 CONFIG_NLS_CODEPAGE_437=y
@@ -81,5 +64,63 @@ CONFIG_INPUT=y
 CONFIG_INPUT_SPARSEKMAP=y
 CONFIG_INPUT_EVDEV=y
 
-CONFIG_USB_ZERO=m
+CONFIG_CLKSRC_OF=y
+CONFIG_COMMON_CLK_DEBUG=y
+
+CONFIG_SMP=y
+CONFIG_SMP_ON_UP=y
+
+CONFIG_VMSPLIT_2G=y
+
+CONFIG_LOCAL_TIMERS=y
+CONFIG_SCHED_HRTICK=y
+
+CONFIG_PM_SLEEP_SMP=y
+
+CONFIG_PROC_DEVICETREE=y
+
+CONFIG_SCSI=y
+CONFIG_SCSI_DMA=y
+
+CONFIG_SERIO_AMBAKMI=y
+
+CONFIG_LEGACY_PTYS=y
+CONFIG_LEGACY_PTY_COUNT=16
+
+CONFIG_GENERIC_PHY=y
+
+CONFIG_MAGIC_SYSRQ=y
+
+CONFIG_DETECT_HUNG_TASK=y
+CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
+
+CONFIG_STACKTRACE=y
+
+CONFIG_DEBUG_INFO=y
+CONFIG_FRAME_POINTER=y
+
+CONFIG_RCU_CPU_STALL_TIMEOUT=21
+CONFIG_NOP_TRACER=y
+CONFIG_TRACE_CLOCK=y
+CONFIG_RING_BUFFER=y
+CONFIG_EVENT_TRACING=y
+CONFIG_CONTEXT_SWITCH_TRACER=y
+CONFIG_RING_BUFFER_ALLOW_SWAP=y
+CONFIG_TRACING=y
+CONFIG_GENERIC_TRACER=y
+
+CONFIG_FUNCTION_TRACER=y
+CONFIG_FUNCTION_GRAPH_TRACER=y
+
+CONFIG_DYNAMIC_FTRACE=y
+CONFIG_FTRACE_MCOUNT_RECORD=y
+
+CONFIG_OLD_MCOUNT=y
+CONFIG_DEBUG_USER=y
+
+CONFIG_BINARY_PRINTF=y
+
+
+
 
