--- a/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
+++ b/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
@@ -86,6 +86,7 @@ CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEFAULT_PERSIST=y
+CONFIG_USB_DWC2_PLATFORM=y
 CONFIG_USB_DWC2=y
 CONFIG_USB_DWC2_DUAL_ROLE=y
 CONFIG_USB_PHY=y
