--- a/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
+++ b/recipes-kernel/linux/config/socfpga-base/features/altera/cyclone5_arria5-ip.cfg
@@ -27,8 +27,8 @@ CONFIG_SPI_DW_MMIO=y
 CONFIG_SRAM=y
 
 # DMA - done
-CONFIG_DMADEVICES=y
-CONFIG_PL330_DMA=y
+# CONFIG_DMADEVICES=y
+# CONFIG_PL330_DMA=y
 
 # PL310 - done
 CONFIG_OUTER_CACHE=y
